--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,11 @@
 *-bkp.js
 
 #project specific
+tests/output-actual/
 
 #webstorm
 # User-specific stuff
+.idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
