--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "mocha": "^5.1.1"
+  },
+  "dependencies": {
+    "mocha": "^5.2.0"
   }
 }
