--- a/package.json
+++ b/package.json
@@ -12,9 +12,18 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "mocha": "^5.1.1"
+    "mocha": "^5.2.0"
   },
   "dependencies": {
-    "mocha": "^5.2.0"
+    "argparse": "^1.0.10",
+    "copy-dir": "^0.4.0",
+    "escodegen": "^1.11.0",
+    "esprima": "^4.0.1",
+    "esquery": "^1.0.1",
+    "estraverse": "^4.2.0",
+    "fs": "0.0.1-security",
+    "mkdirp": "^0.5.1",
+    "path": "^0.12.7",
+    "shelljs": "^0.8.2"
   }
 }
