Ran Loader-Runner on Modified app with original tests

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "esquery": "^1.0.1",
     "estraverse": "^4.2.0",
     "fs": "0.0.1-security",
+    "install": "^0.12.1",
     "json3": "^3.3.2",
     "mkdirp": "^0.5.1",
     "path": "^0.12.7",
